--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,12 @@
     "xlsx": "^0.18.5"
   },
   "overrides": {
-"react-scripts": {
-"@svgr/webpack": "8.1.0",
-"typescript": "4.9.5",
-"postcss": "8.4.38"
-}
-},
+    "react-scripts": {
+      "@svgr/webpack": "8.1.0",
+      "typescript": "4.9.5",
+      "postcss": "8.4.38"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -46,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
