--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "nth-check": "^2.1.1",
     "postcss": "^8.5.1",
     "qrcode.react": "^4.2.0",
@@ -28,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server.js"
+    "server": "node ./src/server.js"
   },
   "eslintConfig": {
     "extends": [
