--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4",
